--- a/lineup.html
+++ b/lineup.html
@@ -66,17 +66,17 @@
         <p>Juriaan</p>
         </div>
 
-        <section class="wissels">
-            <h2>Wissels:</h2>
-                <p>Floris</p>
-                <p>Andy</p>
-                <p>Benji</p>
-                <p>Luke</p>
-                <p>Stein</p>
-                <p>George</p>
-                <p>Carlos</p>
-                <p>Menne</p>
-        </section>
+        <ul> 
+                <li>Wissels:</li>
+                <li>Floris</li>
+                <li>Andy</li>
+                <li>Benji</li>
+                <li>Luke</li>
+                <li>Stein</li>
+                <li>George</li>
+                <li>Carlos</li>
+                <li>Menne</li>
+        </ul>
     </main>
     <footer> 
         <figure>
