--- a/speler.html
+++ b/speler.html
@@ -21,17 +21,16 @@
     
 </header>
     <main class="spelerMain">
-        <h1>Tom Heine</h1>
-        <div>
+        <section>
+            <h1>Tom Heine</h1>
             <img src="fotos/images/speler_f_1.png" alt="fotovanspeler">
-            <div>
-            <p>Positie = Hooker (2)</p>
-            <p>Gewicht = 85 kg</p>
-            <p>Leeftijd = 18 jaar</p>
-            <p>Eerste Club = 't Gooi</p>
-            </div>
-        </div>
-        
+        </section>
+            <ul>
+                <li>Positie = Hooker (2)</li>
+                <li>Gewicht = 85 kg</li>
+                <li>Leeftijd = 18 jaar</li>
+                <li>Eerste Club = 't Gooi</li>
+            </ul>
     </main>
 <footer> 
         <figure>
